<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
    <com.mapbox.mapboxsdk.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <Button
                android:id="@+id/chooseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/chooseButton"
                android:textColor="@android:color/white"/>
        <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/confirm"
                android:visibility="invisible"
                android:textColor="@android:color/white"/>
        <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:visibility="invisible"
                android:textColor="@android:color/white"/>
    </com.mapbox.mapboxsdk.maps.MapView>
    
    <EditText android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/addressText"
              android:background="@color/white"/>
</FrameLayout>