<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/walking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="480dp" android:layout_marginEnd="160dp" android:layout_marginRight="160dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.333"/>
    <Button
            android:text="@string/foodpanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foodpanda"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="365dp" android:layout_marginEnd="160dp" android:layout_marginRight="160dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.333"/>
    <Button
            android:text="@string/ubereat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ubereat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="250dp" android:layout_marginEnd="160dp" android:layout_marginRight="160dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.333"/>
    
    <Button
            android:text="@string/test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/test"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="160dp"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="152dp" android:layout_marginEnd="160dp" android:layout_marginRight="160dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/webText"
              app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginBottom="712dp" android:layout_marginEnd="411dp" android:layout_marginRight="411dp"
              app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>